Friend list show friends images.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -84,7 +84,7 @@ img.navbarPic{
 
             /* When active use this behavior */
             .active {
-                background-color: white;
+                background-color: #1e88e5;
             }
 
             /* When offline use this behavior */
